--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,3 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-
-/**
- * copyright 2022 @codewithsadee
- */
-
-
-
-
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
-
 :root {
 
   /**
@@ -165,7 +148,7 @@ body { background: var(--smoky-black); }
   #REUSED STYLE
 \*-----------------------------------*/
 
-.sidebar,
+.topbar,
 article {
   background: var(--eerie-black-2);
   border: 1px solid var(--jet);
@@ -311,29 +294,22 @@ main {
 
 
 /*-----------------------------------*\
-  #SIDEBAR
+  #TOPBAR
 \*-----------------------------------*/
 
-.sidebar {
+.topbar {
   margin-bottom: 15px;
-  max-height: 112px;
   overflow: hidden;
   transition: var(--transition-2);
 }
 
-.sidebar.active { max-height: 405px; }
+.topbar.active { max-height: 405px; }
 
-.sidebar-info {
+.topbar-info {
   position: relative;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   gap: 15px;
-}
-
-.avatar-box {
-  background: var(--bg-gradient-onyx);
-  border-radius: 20px;
 }
 
 .info-content .name {
@@ -342,11 +318,11 @@ main {
   font-weight: var(--fw-500);
   letter-spacing: -0.25px;
   margin-bottom: 10px;
+  display: flex;
 }
 
 .info-content .title {
   color: var(--white-1);
-  background: var(--onyx);
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
   width: max-content;
@@ -384,15 +360,13 @@ main {
 .info_more-btn:hover::before,
 .info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
 
-.info_more-btn span { display: none; }
-
-.sidebar-info_more {
-  opacity: 0;
-  visibility: hidden;
+.topbar-info_more {
+  opacity: 1;
+  visibility: visible;
   transition: var(--transition-2);
 }
 
-.sidebar.active .sidebar-info_more {
+.topbar.active .topbar-info_more {
   opacity: 1;
   visibility: visible;
 }
@@ -410,10 +384,6 @@ main {
   gap: 16px;
 }
 
-.contact-info {
-  max-width: calc(100% - 46px);
-  width: calc(100% - 46px);
-}
 
 .contact-title {
   color: var(--light-gray-70);
@@ -435,6 +405,7 @@ main {
   align-items: center;
   gap: 15px;
   padding-bottom: 4px;
+  margin-bottom: 12px;
   padding-left: 7px;
 }
 
@@ -462,7 +433,6 @@ main {
   background: hsla(240, 1%, 17%, 0.75);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
   box-shadow: var(--shadow-2);
   z-index: 5;
 }
@@ -556,209 +526,6 @@ main {
 }
 
 
-/**
- * #testimonials 
- */
-
-.testimonials { margin-bottom: 30px; }
-
-.testimonials-title { margin-bottom: 20px; }
-
-.testimonials-list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 15px;
-  margin: 0 -15px;
-  padding: 25px 15px;
-  padding-bottom: 35px;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  overscroll-behavior-inline: contain;
-  scroll-snap-type: inline mandatory;
-}
-
-.testimonials-item {
-  min-width: 100%;
-  scroll-snap-align: center;
-}
-
-.testimonials-avatar-box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(15px, -25px);
-  background: var(--bg-gradient-onyx);
-  border-radius: 14px;
-  box-shadow: var(--shadow-1);
-}
-
-.testimonials-item-title { margin-bottom: 7px; }
-
-.testimonials-text {
-  color: var(--light-gray);
-  font-size: var(--fs-6);
-  font-weight: var(--fw-300);
-  line-height: 1.6;
-  display: -webkit-box;
-  line-clamp: 4;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-
-
-/**
- * #testimonials-modal
- */
-
-.modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow-y: auto;
-  overscroll-behavior: contain;
-  z-index: 20;
-  pointer-events: none;
-  visibility: hidden;
-}
-
-.modal-container::-webkit-scrollbar { display: none; }
-
-.modal-container.active {
-  pointer-events: all;
-  visibility: visible;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: hsl(0, 0%, 5%);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  z-index: 1;
-  transition: var(--transition-1);
-}
-
-.overlay.active {
-  opacity: 0.8;
-  visibility: visible;
-  pointer-events: all;
-}
-
-.testimonials-modal {
-  background: var(--eerie-black-2);
-  position: relative;
-  padding: 15px;
-  margin: 15px 12px;
-  border: 1px solid var(--jet);
-  border-radius: 14px;
-  box-shadow: var(--shadow-5);
-  transform: scale(1.2);
-  opacity: 0;
-  transition: var(--transition-1);
-  z-index: 2;
-}
-
-.modal-container.active .testimonials-modal {
-  transform: scale(1);
-  opacity: 1;
-}
-
-.modal-close-btn {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background: var(--onyx);
-  border-radius: 8px;
-  width: 32px;
-  height: 32px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--white-2);
-  font-size: 18px;
-  opacity: 0.7;
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus { opacity: 1; }
-
-.modal-close-btn ion-icon { --ionicon-stroke-width: 50px; }
-
-.modal-avatar-box {
-  background: var(--bg-gradient-onyx);
-  width: max-content;
-  border-radius: 14px;
-  margin-bottom: 15px;
-  box-shadow: var(--shadow-2);
-}
-
-.modal-img-wrapper > img { display: none; }
-
-.modal-title { margin-bottom: 4px; }
-
-.modal-content time {
-  font-size: var(--fs-6);
-  color: var(--light-gray-70);
-  font-weight: var(--fw-300);
-  margin-bottom: 10px;
-}
-
-.modal-content p {
-  color: var(--light-gray);
-  font-size: var(--fs-6);
-  font-weight: var(--fw-300);
-  line-height: 1.6;
-}
-
-
-/**
- * #clients 
- */
-
-.clients { margin-bottom: 15px; }
-
-.clients-list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 15px;
-  margin: 0 -15px;
-  padding: 25px;
-  padding-bottom: 25px;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  overscroll-behavior-inline: contain;
-  scroll-snap-type: inline mandatory;
-  scroll-padding-inline: 25px;
-}
-
-.clients-item {
-  min-width: 50%;
-  scroll-snap-align: start;
-}
-
-.clients-item img {
-  width: 100%;
-  filter: grayscale(1);
-  transition: var(--transition-1);
-}
-
-.clients-item img:hover { filter: grayscale(0); }
-
-
-
-
 
 /*-----------------------------------*\
   #RESUME
@@ -796,7 +563,7 @@ main {
 }
 
 .timeline-list span {
-  color: var(--vegas-gold);
+  color: var(--white-1);
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
@@ -833,8 +600,6 @@ main {
 /**
  * skills 
  */
-
-.skills-title { margin-bottom: 20px; }
 
 .skills-list { padding: 20px; }
 
@@ -1221,10 +986,17 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
 
+.avatar-box img{ border-radius: 50%; }
 
+.mail-content {
+  display: flex;
+  width: max-content;
+  align-items: center;
 
-
-
+  .contact-info {
+    padding-left: 10px;
+  }
+}
 /*-----------------------------------*\
   #RESPONSIVE
 \*-----------------------------------*/
@@ -1288,7 +1060,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * #REUSED STYLE
    */
 
-  .sidebar, article {
+  .topbar, article {
     width: 520px;
     margin-inline: auto;
     padding: 30px;
@@ -1325,19 +1097,17 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 
   /**
-   * #SIDEBAR
+   * #topbar
    */
 
-  .sidebar {
+  .topbar {
     max-height: 180px;
     margin-bottom: 30px;
   }
 
-  .sidebar.active { max-height: 584px; }
+  .topbar.active { max-height: 584px; }
 
-  .sidebar-info { gap: 25px; }
-
-  .avatar-box { border-radius: 30px; }
+  .topbar-info { gap: 25px; }
 
   .avatar-box img { width: 120px; }
 
@@ -1362,18 +1132,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .contacts-list { gap: 20px; }
 
-  .contact-info {
-    max-width: calc(100% - 64px);
-    width: calc(100% - 64px);
-  }
-
-
 
   /**
    * #NAVBAR
    */
-
-  .navbar { border-radius: 20px 20px 0 0; }
 
   .navbar-list { gap: 20px; }
 
@@ -1555,14 +1317,14 @@ textarea.form-input::-webkit-resizer { display: none; }
    * REUSED STYLE
    */
 
-  .sidebar, article { width: 700px; }
+  .topbar, article { width: 700px; }
 
   .has-scrollbar::-webkit-scrollbar-button { width: 100px; }
 
 
 
   /**
-   * SIDEBAR
+   * topbar
    */
 
   .contacts-list {
@@ -1673,9 +1435,16 @@ textarea.form-input::-webkit-resizer { display: none; }
    * REUSED STYLE
    */
 
-  .sidebar, article {
+  .topbar, article {
     width: 950px;
     box-shadow: var(--shadow-5);
+  }
+
+  .navbar {
+    background: none;
+    backdrop-filter: none;
+    border: none;
+    box-shadow: none;
   }
 
 
@@ -1792,7 +1561,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * REUSED STYLE
    */
 
-  .sidebar, article { width: auto; }
+  .topbar, article { width: auto; }
 
   article { min-height: 100%; }
 
@@ -1805,37 +1574,39 @@ textarea.form-input::-webkit-resizer { display: none; }
   main {
     max-width: 1200px;
     margin-inline: auto;
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
     gap: 25px;
   }
 
   .main-content {
-    min-width: 75%;
-    width: 75%;
+    min-width: 100%;
+    width: 100%;
     margin: 0;
   }
 
 
 
   /**
-   * SIDEBAR
+   * topbar
    */
 
-  .sidebar {
-    position: sticky;
-    top: 60px;
-    max-height: max-content;
+  .topbar {
     height: 100%;
-    margin-bottom: 0;
-    padding-top: 60px;
+    max-height: fit-content;
     z-index: 1;
   }
 
-  .sidebar-info { flex-direction: column; }
+  .topbar-info { 
+    flex-direction: row;
+    max-width: 25%;
+  }
 
-  .avatar-box img { width: 150px; }
+  .avatar-box {
+    padding-left: 20px;
+
+    img {
+      width: 150px;
+    }
+  }
 
   .info-content .name {
     white-space: nowrap;
@@ -1844,20 +1615,12 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .info-content .title { margin: auto; }
 
-  .info_more-btn { display: none; }
-
-  .sidebar-info_more {
+  .topbar-info_more {
     opacity: 1;
     visibility: visible;
   }
 
   .contacts-list { grid-template-columns: 1fr; }
-
-  .contact-info :is(.contact-link) {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
 
   .contact-info :is(.contact-link, time, address) {
     --fs-7: 14px;
@@ -1868,8 +1631,6 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin: 15px 0;
     opacity: 0;
   }
-
-  .social-list { justify-content: center; }
 
 
 
