--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,13 @@ main {
   }
 }
 
+
+.project-list {
+  a {
+    color: cornflowerblue;
+  }
+}
+
 .resume {
   a {
     display: inline;
@@ -791,20 +798,28 @@ main {
 
 .project-title {
   color: var(--white-2);
-  font-size: var(--fs-5);
+  font-size: var(--fs-4);
   font-weight: var(--fw-400);
   text-transform: capitalize;
   line-height: 1.3;
+  margin-top: 10px;
+  margin-bottom:10px
 }
 
 .project-category {
-  color: var(--light-gray-70);
+  color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
+  margin-bottom:5px;
 }
 
-
-
+.project-tech-stack {
+  color: var(--orange-yellow-crayola);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
 
 
 /*-----------------------------------*\
@@ -1522,7 +1537,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * PORTFOLIO
    */
 
-  .project-list { grid-template-columns: repeat(3, 1fr); }
+  .project-list { grid-template-columns: repeat(2, 1fr); }
 
 
 
