--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,6 +305,13 @@ main {
 }
 
 
+.achievements {
+  a {
+    color: cornflowerblue;
+  }
+
+}
+
 .project-list {
   a {
     color: cornflowerblue;
@@ -440,7 +447,7 @@ main {
 \*-----------------------------------*/
 
 .navbar {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -799,7 +806,7 @@ main {
 .project-title {
   color: var(--white-2);
   font-size: var(--fs-4);
-  font-weight: var(--fw-400);
+  font-weight: var(--fw-600);
   text-transform: capitalize;
   line-height: 1.3;
   margin-top: 10px;
@@ -1464,15 +1471,6 @@ textarea.form-input::-webkit-resizer { display: none; }
     /* box-shadow: var(--shadow-5); */
   }
 
-  .navbar {
-    background: none;
-    backdrop-filter: none;
-    border: none;
-    box-shadow: none;
-  }
-
-
-
   /**
    * MAIN 
    */
@@ -1483,32 +1481,36 @@ textarea.form-input::-webkit-resizer { display: none; }
     position: relative;
     width: max-content;
     margin: auto;
+    display: contents;
   }
-
-
 
   /**
    * NAVBAR
    */
 
   .navbar {
-    /* position: absolute; */
+    position: absolute;
     bottom: auto;
     top: 0;
     left: auto;
     right: 0;
     width: max-content;
-    border-radius: 0 20px;
     padding: 0 20px;
     box-shadow: none;
+    background: none;
+    backdrop-filter: none;
+    border: none;
   }
 
   .navbar-list {
-    gap: 30px;
-    padding: 0 20px;
+    gap: 18px;
+    padding: 0 10px;
   }
 
-  .navbar-link { font-weight: var(--fw-500); }
+  .navbar-link { 
+    font-weight: var(--fw-500); 
+    font-size: var(--fs-4); 
+  }
 
 
 
