--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,7 +591,7 @@ main {
 }
 
 .publication {
-  color: var(--vegas-gold) !important;
+  color: skyblue !important;
 }
 
 .timeline-item:not(:last-child)::before {
