--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,7 @@ main {
 }
 
 .publication {
-  color: cornflowerblue !important;
+  color: var(--vegas-gold) !important;
 }
 
 .timeline-item:not(:last-child)::before {
