--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,7 @@ main {
   transition: var(--transition-2);
 }
 
-.about-text {
+.about-text, .news-text {
   a {
     display: inline;
     color: cornflowerblue;
@@ -307,6 +307,8 @@ main {
     text-decoration: underline;
     font-weight: bold;
   }
+
+  margin-bottom: 32px;
 }
 
 
@@ -515,16 +517,23 @@ main {
 
 .about .article-title { margin-bottom: 15px; }
 
-.about-text {
+.about-text, .news-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
 
-.about-text p { margin-bottom: 15px; }
+.about-text, .news-text p { margin-bottom: 15px; }
 
+.news-list {
+  display: inline;
+}
 
+.news-date {
+  font-weight: var(--fw-600);
+  display: inline;
+}
 
 /**
  * #service 
